fixed issues relating to undefined about-section height, images cutting off and wrong images used

--- a/src/app/about-section/about-section.component.scss
+++ b/src/app/about-section/about-section.component.scss
@@ -25,7 +25,7 @@ p {
   width: 100%;
   left: 50%;
   margin-left: -50%;
-  z-index: -1;
+  z-index: -2;
 }
 .about-pic{
   width: 100%;
@@ -68,8 +68,8 @@ hideOverflow {
   }
 }
 @media (max-width: 768px) {
-  .about-container {
-    height: 50vh;
-  }
+  //.about-container {
+  //  height: 50vh;
+  //}
 }
 
